# evapro

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pub2pypi.yml
evapro/: __init__.py
evapro/config/: __init__.py  conf.py  evapro.yaml
evapro/db/: __init__.py  database.py  syncproject.db  update_db.py
evapro/scripts/: evaproject.py
